# foreignscan-android

./: AGENTS.md  CLAUDE.md  README.md  pubspec.yaml  test_add.txt  test_camera.md
.claude/: settings.local.json
.trae/rules/: project_rules.md
android/: build.gradle.kts  gradle.properties  key.properties.example
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  orb_matcher.cpp  orb_matcher.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: app_config.dart  app_constants.dart
lib/core/models/: transfer_error.dart
lib/core/providers/: app_info_providers.dart  app_providers.dart  camera_providers.dart  home_providers.dart  usb_transfer_provider.dart
lib/core/routes/: app_router.dart
lib/models/: detection_result.dart  inspection_record.dart  scene_data.dart  style_image.dart  verification_record.dart
lib/screens/: camera_screen.dart  detection_result_data.dart  detection_result_filters.dart  detection_result_screen.dart  detection_result_widgets.dart  fullscreen_image_page.dart  home_page.dart  image_upload_screen.dart  record_detail_page.dart  records_page.dart  settings_screen.dart
lib/services/: camera_integration_service.dart  usb_transfer_service.dart
lib/utils/: camera_manager.dart  screen_utils.dart
lib/widgets/: about_app_dialog.dart  app_drawer.dart  records_section.dart  scene_display.dart  scene_selector.dart  scene_tile.dart  verification_list.dart
skills/foreignscan-pad-development/: SKILL.md
test/widgets/: records_section_test.dart
(+35 files in other folders)
